--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -37,11 +37,6 @@ body {
     display: flex;
     flex-direction: column;
     padding: 60px 80px 120px 80px;
-    background-color: rgba(78, 173, 254, 0.1);
-}
-
-.homepage-links-container + footer > .footer-container {
-    background-color: rgba(78, 173, 254, 0.1);
 }
 
 .homepage-projects-container {
